✨ refactor: MDX docs format and migrate FAQ to Accordions
## Summary
Standardize MDX formatting across all documentation files and improve
FAQ pages with collapsible accordion components.

## Changes

### Format Fixes (9 files)
- Replace MkDocs `!!! caution` syntax with `<Callout type="warn">`
- Convert inline code in Callouts to proper code blocks
- Fix malformed Callout title attributes
- Fix table formatting issues with pipe character escaping
- Files: `claude-code.mdx`, `codex-cli.mdx`, `factory-droid-cli.mdx` (zh/en/ja)

### Remove Unsupported `collapsible` Attribute (15 files)
- Remove `collapsible` prop from all Callout components
- Fixes React DOM warning: "Received `true` for a non-boolean attribute"
- Affected: apps/*, support/faq.mdx, installation/*/bt-docker-installation.mdx

### FAQ Migration to Accordions (3 files)
- Replace Callout components with Accordions/Accordion from fumadocs-ui
- Consolidate content inside accordion components (was split outside)
- Add proper Markdown formatting support within accordions
- Files: `support/faq.mdx` (zh/en/ja)

### Configuration
- Add `content/**/*.mdx` to `.prettierignore` to prevent format corruption

## Benefits
- Eliminates console errors in development
- Provides collapsible FAQ sections for better UX
- Ensures consistent Fumadocs-compatible MDX syntax
- Prevents Prettier from breaking MDX formatting

--- a/content/docs/zh/apps/codex-cli.mdx
+++ b/content/docs/zh/apps/codex-cli.mdx
@@ -2,39 +2,14 @@
 title: OpenAI Codex CLI
 ---
 
----
-
-<div className="inline-badge" style={{ lineHeight: 1, display: 'block' }}>
-  <img
-    src="https://img.shields.io/badge/-Windows-0078D6?logo=windows&style=flat&logoColor=white"
-    alt="Windows"
-    style={{ height: '20px', margin: 0, verticalAlign: 'top' }}
-  />
-  <img
-    src="https://img.shields.io/badge/-macOS-black?logo=apple&style=flat&logoColor=white"
-    alt="macOS"
-    style={{ height: '20px', margin: 0, verticalAlign: 'top' }}
-  />
-  <img
-    src="https://img.shields.io/badge/-Linux-FCC624?logo=linux&style=flat&logoColor=black"
-    alt="Linux"
-    style={{ height: '20px', margin: 0, verticalAlign: 'top' }}
-  />
-</div>
-
 <Callout type="info" title="项目介绍">
-  Codex CLI is a coding agent from OpenAI that runs locally on your computer.
+  Codex CLI 是一个来自 OpenAI 的编码代理，可在您的计算机上本地运行。
+
+  - 官方主页：[https://chatgpt.com/codex](https://chatgpt.com/codex)
+  - 项目主页：[https://github.com/openai/codex](https://github.com/openai/codex)
 </Callout>
 
-    Codex CLI 是一个来自 OpenAI 的编码代理，可在您的计算机上本地运行。
-
-    1. 官方主页：<a href="https://chatgpt.com/codex" target="_blank" rel="noopener noreferrer">https://chatgpt.com/codex</a>
-    1. 项目主页：<a href="https://github.com/openai/codex" target="_blank" rel="noopener noreferrer">https://github.com/openai/codex</a>
-    1. 安装方法：见本页下方教程
-
 ## 效果演示
-
----
 
 ![introduce-01.webp](/assets/codex/introduce-01.webp)
 
@@ -66,38 +41,53 @@ title: OpenAI Codex CLI
 为在 Windows 上获得最佳性能，请安装并使用 Windows Subsystem for Linux (WSL2)。
 
 <Callout type="info" title="安装 WSL2，重启 Windows 计算机">
-  ` wsl --install ` 安装完成后重启 Windows 计算机
+  ```powershell
+  wsl --install
+  ```
+
+  安装完成后重启 Windows 计算机。
 </Callout>
 
-!!! caution "Windows 注意事项" - 建议使用 PowerShell 而不是 CMD - 如果遇到权限问题，尝试以管理员身份运行 - 某些杀毒软件可能会误报，需要添加白名单
+<Callout type="warn" title="Windows 注意事项">
+  - 建议使用 PowerShell 而不是 CMD
+  - 如果遇到权限问题，尝试以管理员身份运行
+  - 某些杀毒软件可能会误报，需要添加白名单
+</Callout>
 
 ![windows-img-03.webp](/assets/codex/windows-img-03.webp)
 
 <Callout type="info" title="下载 Node Version Manager (NVM)">
-  ` curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/master/install.sh |
-  bash `
+  ```bash
+  curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/master/install.sh | bash
+  ```
 </Callout>
 
 ![windows-img-04.webp](/assets/codex/windows-img-04.webp)
 
 <Callout type="info" title="NVM 安装 Node.js 22">
-  标签栏新开一个 PowerShell 窗口，打开 WSL ` wsl `
+  标签栏新开一个 PowerShell 窗口，打开 WSL：
+
+  ```bash
+  wsl
+  ```
+
+  安装 Node.js（版本号有时效性，请根据 [OpenAI 官网](https://developers.openai.com/codex/windows) 要求安装对应版本）：
+
+  ```bash
+  nvm install 22
+  ```
 </Callout>
-
-    安装 Node.js
-
-    版本号有时效性，请根据 OpenAI 官网要求安装对应版本：https://developers.openai.com/codex/windows
-    ```
-    nvm install 22
-    ```
 
 ![windows-img-05.webp](/assets/codex/windows-img-05.webp)
 
 #### 3.安装 Codex CLI
 
 <Callout type="info" title="安装 Codex CLI">
-  ` npm i -g @openai/codex ` 这个命令会从 npm 官方仓库下载并安装最新版本的 Codex
-  CLI。
+  ```bash
+  npm i -g @openai/codex
+  ```
+
+  这个命令会从 npm 官方仓库下载并安装最新版本的 Codex CLI。
 </Callout>
 
 ![windows-img-06.webp](/assets/codex/windows-img-06.webp)
@@ -105,9 +95,9 @@ title: OpenAI Codex CLI
 #### 4.修改配置文件
 
 <Callout type="info" title="一键修改 Codex CLI 配置文件">
-  ` iex (irm
-  'https://raw.githubusercontent.com/QuantumNous/new-api-docs/refs/heads/main/helper/codex-cli-setup.ps1')
-  `
+  ```powershell
+  iex (irm 'https://raw.githubusercontent.com/QuantumNous/new-api-docs/refs/heads/main/helper/codex-cli-setup.ps1')
+  ```
 </Callout>
 
 ![windows-configure](/assets/codex/windows_configure.png)
@@ -117,18 +107,38 @@ title: OpenAI Codex CLI
 现在你可以开始使用 Codex CLI 了！
 
 <Callout type="info" title="启动 Codex CLI">
-  启动 WSL2 ` wsl ` 直接启动 Codex CLI: ` codex ` 在特定项目中使用: ` cd
-  mnt/c/path/to/your/project ` ` codex ` Enter 启动 Codex CLI
+  启动 WSL2：
+
+  ```bash
+  wsl
+  ```
+
+  直接启动 Codex CLI：
+
+  ```bash
+  codex
+  ```
+
+  在特定项目中使用：
+
+  ```bash
+  cd mnt/c/path/to/your/project
+  codex
+  ```
+
+  按 Enter 启动 Codex CLI。
 </Callout>
 
 ![windows-img-09.webp](/assets/codex/windows-img-09.webp)
 
 ![windows-img-10.webp](/assets/codex/windows-img-10.webp)
 
-> 设置 Codex CLI 的权限：1.允许 Codex 直接修改文件；2.Codex 修改文件需要手动授权
+> 设置 Codex CLI 的权限：1. 允许 Codex 直接修改文件；2. Codex 修改文件需要手动授权
 
 <Callout type="info" title="选择模型">
-  ` /model `
+  ```bash
+  /model
+  ```
 </Callout>
 
 ![windows-img-11.webp](/assets/codex/windows-img-11.webp)
@@ -152,8 +162,9 @@ Homebrew 是 macOS 缺失的软件包的管理器。
 ![macos-img-01.webp](/assets/codex/macos-img-01.webp)
 
 <Callout type="info" title="安装 Homebrew">
-  ` /bin/bash -c "$(curl -fsSL
-  https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)" `
+  ```bash
+  /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+  ```
 </Callout>
 
 ![macos-img-02.webp](/assets/codex/macos-img-02.webp)
@@ -165,40 +176,75 @@ Homebrew 是 macOS 缺失的软件包的管理器。
 #### 2.安装 Node.js 环境
 
 <Callout type="info" title="Node.js 环境安装步骤">
-  更新 Homebrew ` brew update ` 安装 Node.js ` brew install node `
+  更新 Homebrew：
+
+  ```bash
+  brew update
+  ```
+
+  安装 Node.js：
+
+  ```bash
+  brew install node
+  ```
 </Callout>
 
-!!! caution "macOS 注意事项" - 如果遇到权限问题，可能需要使用`sudo` - 首次运行可能需要在系统偏好设置中允许 - 建议使用`Terminal`或`iTerm2`
+<Callout type="warn" title="macOS 注意事项">
+  - 如果遇到权限问题，可能需要使用 `sudo`
+  - 首次运行可能需要在系统偏好设置中允许
+  - 建议使用 Terminal 或 iTerm2
+</Callout>
 
 ![macos-img-05.webp](/assets/codex/macos-img-05.webp)
 
 ![macos-img-06.webp](/assets/codex/macos-img-06.webp)
 
-<Callout type="info">
-  rmation "验证安装是否成功" 安装完成后，打开终端，输入以下命令： ` node
-  --version npm --version ` 如果显示版本号，说明安装成功
+<Callout type="info" title="验证安装是否成功">
+  安装完成后，打开终端，输入以下命令：
+
+  ```bash
+  node --version
+  npm --version
+  ```
+
+  如果显示版本号，说明安装成功。
 </Callout>
 
 #### 3.安装 Codex CLI
 
 <Callout type="info" title="安装 Codex CLI">
-  打开终端，运行以下命令： ` # 全局安装 Codex CLI npm install -g @openai/codex `
-  如果遇到权限问题，可以使用 sudo： ` sudo npm install -g @openai/codex `
+  打开终端，运行以下命令：
+
+  ```bash
+  # 全局安装 Codex CLI
+  npm install -g @openai/codex
+  ```
+
+  如果遇到权限问题，可以使用 sudo：
+
+  ```bash
+  sudo npm install -g @openai/codex
+  ```
 </Callout>
 
 ![macos-img-07.webp](/assets/codex/macos-img-07.webp)
 
 <Callout type="info" title="验证 Codex CLI 安装">
-  安装完成后，输入以下命令检查是否安装成功： ` codex --version `
+  安装完成后，输入以下命令检查是否安装成功：
+
+  ```bash
+  codex --version
+  ```
+
   如果显示版本号，恭喜你！Codex CLI 已经成功安装了。
 </Callout>
 
 #### 4.修改配置文件
 
 <Callout type="info" title="一键修改 Codex CLI 配置文件">
-  ` curl -fsSL
-  https://raw.githubusercontent.com/QuantumNous/new-api-docs/refs/heads/main/helper/codex-cli-setup.sh
-  | bash `
+  ```bash
+  curl -fsSL https://raw.githubusercontent.com/QuantumNous/new-api-docs/refs/heads/main/helper/codex-cli-setup.sh | bash
+  ```
 </Callout>
 
 ![macos-configure](/assets/codex/macos_configure.png)
@@ -208,15 +254,27 @@ Homebrew 是 macOS 缺失的软件包的管理器。
 现在你可以开始使用 Codex CLI 了！
 
 <Callout type="info" title="启动 Codex CLI">
-  直接启动 Codex CLI: ` codex ` 在特定项目中使用: ` cd
-  mnt/c/path/to/your/project ` ` codex ` Enter 启动 Codex CLI
+  直接启动 Codex CLI：
+
+  ```bash
+  codex
+  ```
+
+  在特定项目中使用：
+
+  ```bash
+  cd /path/to/your/project
+  codex
+  ```
+
+  按 Enter 启动 Codex CLI。
 </Callout>
 
 ![macos-img-09.webp](/assets/codex/macos-img-09.webp)
 
 ![macos-img-10.webp](/assets/codex/macos-img-10.webp)
 
-> 设置 Codex CLI 的权限：1.允许 Codex 直接修改文件；2.Codex 修改文件需要手动授权
+> 设置 Codex CLI 的权限：1. 允许 Codex 直接修改文件；2. Codex 修改文件需要手动授权
 
 ![macos-img-11.webp](/assets/codex/macos-img-11.webp)
 
@@ -230,20 +288,20 @@ Homebrew 是 macOS 缺失的软件包的管理器。
 
 #### 6.macOS 常见问题解决
 
-<Callout type="info" title="安装时提示权限错误" collapsible>
+<Callout type="info" title="安装时提示权限错误">
   尝试以下解决方法：
+
+  - 使用 `sudo` 安装：`sudo npm install -g @openai/codex`
+  - 或者配置 `npm` 使用用户目录：`npm config set prefix ~/.npm-global`
 </Callout>
 
-    - 使用`sudo`安装：`sudo npm install -g @openai/codex`
-    - 或者配置`npm`使用用户目录：`npm config set prefix ~/.npm-global`
-
-<Callout type="info" title="macOS 安全设置阻止运行" collapsible>
+<Callout type="info" title="macOS 安全设置阻止运行">
   如果系统阻止运行 Codex CLI：
-</Callout>
 
-    - 打开"系统偏好设置" → "安全性与隐私"
-    - 点击"仍要打开"或"允许"
-    - 或者在`Terminal`中运行：`sudo spctl --master-disable`
+  - 打开"系统偏好设置" → "安全性与隐私"
+  - 点击"仍要打开"或"允许"
+  - 或者在 Terminal 中运行：`sudo spctl --master-disable`
+</Callout>
 
 ### Linux 端图文指引
 
@@ -252,40 +310,75 @@ Homebrew 是 macOS 缺失的软件包的管理器。
 Codex CLI 需要 Node.js 环境才能运行。
 
 <Callout type="info" title="Node.js 环境安装步骤">
-  添加 NodeSource 仓库 ` sudo curl -fsSL https://deb.nodesource.com/setup_lts.x
-  | sudo -E bash - ` 安装 Node.js ` sudo apt-get install -y nodejs `
+  添加 NodeSource 仓库：
+
+  ```bash
+  sudo curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
+  ```
+
+  安装 Node.js：
+
+  ```bash
+  sudo apt-get install -y nodejs
+  ```
 </Callout>
 
-!!! caution "Linux 注意事项" - 某些发行版可能需要安装额外的依赖 - 如果遇到权限问题，使用 sudo - 确保你的用户在 npm 的全局目录有写权限
+<Callout type="warn" title="Linux 注意事项">
+  - 某些发行版可能需要安装额外的依赖
+  - 如果遇到权限问题，使用 sudo
+  - 确保你的用户在 npm 的全局目录有写权限
+</Callout>
 
 ![linux-img-01.webp](/assets/codex/linux-img-01.webp)
 
 ![linux-img-02.webp](/assets/codex/linux-img-02.webp)
 
-<Callout type="info">
-  rmation "验证安装是否成功" 安装完成后，打开终端，输入以下命令： ` node
-  --version npm --version ` 如果显示版本号，说明安装成功
+<Callout type="info" title="验证安装是否成功">
+  安装完成后，打开终端，输入以下命令：
+
+  ```bash
+  node --version
+  npm --version
+  ```
+
+  如果显示版本号，说明安装成功。
 </Callout>
 
 #### 2.安装 Codex CLI
 
 <Callout type="info" title="安装 Codex CLI">
-  打开终端，运行以下命令： ` # 全局安装 Codex CLI npm install -g @openai/codex `
-  如果遇到权限问题，可以使用 sudo： ` sudo npm install -g @openai/codex `
-  ![linux-img-03.webp](/assets/codex/linux-img-03.webp)
+  打开终端，运行以下命令：
+
+  ```bash
+  # 全局安装 Codex CLI
+  npm install -g @openai/codex
+  ```
+
+  如果遇到权限问题，可以使用 sudo：
+
+  ```bash
+  sudo npm install -g @openai/codex
+  ```
 </Callout>
 
+![linux-img-03.webp](/assets/codex/linux-img-03.webp)
+
 <Callout type="info" title="验证 Codex CLI 安装">
-  安装完成后，输入以下命令检查是否安装成功： ` codex --version `
+  安装完成后，输入以下命令检查是否安装成功：
+
+  ```bash
+  codex --version
+  ```
+
   如果显示版本号，恭喜你！Codex CLI 已经成功安装了。
 </Callout>
 
 #### 3.修改配置文件
 
 <Callout type="info" title="一键修改 Codex CLI 配置文件">
-  ` curl -fsSL
-  https://raw.githubusercontent.com/QuantumNous/new-api-docs/refs/heads/main/helper/codex-cli-setup.sh
-  | bash `
+  ```bash
+  curl -fsSL https://raw.githubusercontent.com/QuantumNous/new-api-docs/refs/heads/main/helper/codex-cli-setup.sh | bash
+  ```
 </Callout>
 
 ![macos-configure](/assets/codex/macos_configure.png)
@@ -295,16 +388,30 @@ Codex CLI 需要 Node.js 环境才能运行。
 现在你可以开始使用 Codex CLI 了！
 
 <Callout type="info" title="启动 Codex CLI">
-  直接启动 Codex CLI: ` # 启动 Codex CLI codex ` 在特定项目中使用: ` #
-  进入你的项目目录 cd /path/to/your/project ` ` # 启动 Codex CLI codex ` Enter
-  启动 Codex CLI
+  直接启动 Codex CLI：
+
+  ```bash
+  codex
+  ```
+
+  在特定项目中使用：
+
+  ```bash
+  # 进入你的项目目录
+  cd /path/to/your/project
+
+  # 启动 Codex CLI
+  codex
+  ```
+
+  按 Enter 启动 Codex CLI。
 </Callout>
 
 ![linux-img-05.webp](/assets/codex/linux-img-05.webp)
 
 ![linux-img-06.webp](/assets/codex/linux-img-06.webp)
 
-> 设置 Codex CLI 的权限：1.允许 Codex 直接修改文件；2.Codex 修改文件需要手动授权
+> 设置 Codex CLI 的权限：1. 允许 Codex 直接修改文件；2. Codex 修改文件需要手动授权
 
 ![linux-img-07.webp](/assets/codex/linux-img-07.webp)
 
@@ -318,17 +425,22 @@ Codex CLI 需要 Node.js 环境才能运行。
 
 #### 5.Linux 常见问题解决
 
-<Callout type="info" title="安装时提示权限错误" collapsible>
+<Callout type="info" title="安装时提示权限错误">
   尝试以下解决方法：
+
+  - 使用 `sudo` 安装：`sudo npm install -g @openai/codex`
+  - 或者配置 `npm` 使用用户目录：`npm config set prefix ~/.npm-global`
+  - 然后添加到 PATH：`export PATH=~/.npm-global/bin:$PATH`
 </Callout>
 
-    - 使用`sudo`安装：`sudo npm install -g @openai/codex`
+<Callout type="info" title="缺少依赖库">
+  某些 Linux 发行版需要安装额外依赖：
 
-    - 或者配置`npm`使用用户目录：`npm config set prefix ~/.npm-global`
+  ```bash
+  # Ubuntu/Debian
+  sudo apt install build-essential
 
-    - 然后添加到`PATH`：`export PATH=~/.npm-global/bin:$PATH`
-
-<Callout type="info" title="缺少依赖库" collapsible>
-  某些 Linux 发行版需要安装额外依赖： ` # Ubuntu/Debian sudo apt install
-  build-essential ` ` # CentOS/RHEL sudo dnf groupinstall "Development Tools" `
+  # CentOS/RHEL
+  sudo dnf groupinstall "Development Tools"
+  ```
 </Callout>
