--- a/content/docs/zh/installation/deployment-methods/bt-docker-installation.mdx
+++ b/content/docs/zh/installation/deployment-methods/bt-docker-installation.mdx
@@ -40,7 +40,7 @@ title: 宝塔面板部署
 
 > 强烈建议通过“应用商店”安装并自动完成配置。本节为高级用法，适合明确了解Docker与宝塔容器配置的用户。
 
-<Callout type="warn" title="我确认要手动设置镜像，出现问题自行解决" collapsible>
+<Callout type="warn" title="我确认要手动设置镜像，出现问题自行解决">
   仅在您勾选并同意上述确认后，再参考以下步骤手动配置自定义镜像：
 </Callout>
 
