--- a/content/docs/en/apps/codex-cli.mdx
+++ b/content/docs/en/apps/codex-cli.mdx
@@ -2,46 +2,21 @@
 title: OpenAI Codex CLI
 ---
 
----
-
-<div className="inline-badge" style={{ lineHeight: 1, display: 'block' }}>
-  <img
-    src="https://img.shields.io/badge/-Windows-0078D6?logo=windows&style=flat&logoColor=white"
-    alt="Windows"
-    style={{ height: '20px', margin: 0, verticalAlign: 'top' }}
-  />
-  <img
-    src="https://img.shields.io/badge/-macOS-black?logo=apple&style=flat&logoColor=white"
-    alt="macOS"
-    style={{ height: '20px', margin: 0, verticalAlign: 'top' }}
-  />
-  <img
-    src="https://img.shields.io/badge/-Linux-FCC624?logo=linux&style=flat&logoColor=black"
-    alt="Linux"
-    style={{ height: '20px', margin: 0, verticalAlign: 'top' }}
-  />
-</div>
-
 <Callout type="info" title="Project Introduction">
   Codex CLI is a coding agent from OpenAI that runs locally on your computer.
+
+  - Official Homepage: [https://chatgpt.com/codex](https://chatgpt.com/codex)
+  - Project Homepage: [https://github.com/openai/codex](https://github.com/openai/codex)
 </Callout>
 
-    Codex CLI is a coding agent from OpenAI that runs locally on your computer.
-
-    1. Official Homepage：<a href="https://chatgpt.com/codex" target="_blank" rel="noopener noreferrer">https://chatgpt.com/codex</a>
-    1. Project Homepage：<a href="https://github.com/openai/codex" target="_blank" rel="noopener noreferrer">https://github.com/openai/codex</a>
-    1. Installation Method: See the tutorial below on this page
-
 ## Demo
-
----
 
 ![introduce-01.webp](/assets/codex/introduce-01.webp)
 
 ### Features
 
 | **Feature Category**            | **Feature**                                                                                                                                                                          |
-| :------------------------------ | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| ------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | Terminal-based Coding Assistant | Codex CLI is a terminal-based interactive coding assistant for editing code, generating patches, and running commands in the command line.                                           |
 | Tool-driven Architecture        | Provides tools such as `apply_patch`, `shell`, `update_plan`, and `multi_tool_use` for controlled modifications to repository files and operations.                                  |
 | Atomic Patch Editing            | Uses a dedicated patch format to atomically add/update/delete files via `apply_patch`, facilitating auditing and rollback.                                                           |
@@ -66,51 +41,63 @@ title: OpenAI Codex CLI
 For optimal performance on Windows, install and use Windows Subsystem for Linux (WSL2).
 
 <Callout type="info" title="Install WSL2, Restart Windows Computer">
-  ` wsl --install ` Restart your Windows computer after installation.
+  ```powershell
+  wsl --install
+  ```
+
+  Restart your Windows computer after installation.
 </Callout>
 
-!!! caution "Windows Notes" - It is recommended to use PowerShell instead of CMD - If you encounter permission issues, try running as administrator - Some antivirus software may falsely flag it; you need to add it to the whitelist
+<Callout type="warn" title="Windows Notes">
+  - It is recommended to use PowerShell instead of CMD
+  - If you encounter permission issues, try running as administrator
+  - Some antivirus software may falsely flag it; you need to add it to the whitelist
+</Callout>
 
 ![windows-img-03.webp](/assets/codex/windows-img-03.webp)
 
 <Callout type="info" title="Download Node Version Manager (NVM)">
-  ` curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/master/install.sh |
-  bash `
+  ```bash
+  curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/master/install.sh | bash
+  ```
 </Callout>
 
 ![windows-img-04.webp](/assets/codex/windows-img-04.webp)
 
 <Callout type="info" title="NVM Installs Node.js 22">
-  Open a new PowerShell window in the tab bar, then open WSL ` wsl `
+  Open a new PowerShell window in the tab bar, then open WSL:
+
+  ```bash
+  wsl
+  ```
+
+  Install Node.js (version numbers are time-sensitive; please install the corresponding version according to [OpenAI's official website](https://developers.openai.com/codex/windows) requirements):
+
+  ```bash
+  nvm install 22
+  ```
 </Callout>
-
-    Install Node.js
-
-    Version numbers are time-sensitive; please install the corresponding version according to OpenAI's official website requirements: https://developers.openai.com/codex/windows
-    ```
-    nvm install 22
-    ```
 
 ![windows-img-05.webp](/assets/codex/windows-img-05.webp)
 
 #### 3. Install Codex CLI
 
 <Callout type="info" title="Install Codex CLI">
-  ` npm i -g @openai/codex ` This command downloads and installs the latest
-  version of Codex CLI from the official npm repository.
+  ```bash
+  npm i -g @openai/codex
+  ```
+
+  This command downloads and installs the latest version of Codex CLI from the official npm repository.
 </Callout>
 
 ![windows-img-06.webp](/assets/codex/windows-img-06.webp)
 
 #### 4. Modify Configuration File
 
-<Callout
-  type="info"
-  title="One-click Modification of Codex CLI Configuration File"
->
-  ` iex (irm
-  'https://raw.githubusercontent.com/QuantumNous/new-api-docs/refs/heads/main/helper/codex-cli-setup.ps1')
-  `
+<Callout type="info" title="One-click Modification of Codex CLI Configuration File">
+  ```powershell
+  iex (irm 'https://raw.githubusercontent.com/QuantumNous/new-api-docs/refs/heads/main/helper/codex-cli-setup.ps1')
+  ```
 </Callout>
 
 ![windows-configure](/assets/codex/windows_configure.png)
@@ -120,9 +107,26 @@ For optimal performance on Windows, install and use Windows Subsystem for Linux 
 Now you can start using Codex CLI!
 
 <Callout type="info" title="Launch Codex CLI">
-  Launch WSL2 ` wsl ` Launch Codex CLI directly: ` codex ` Use in a specific
-  project: ` cd mnt/c/path/to/your/project ` ` codex ` Press Enter to launch
-  Codex CLI
+  Launch WSL2:
+
+  ```bash
+  wsl
+  ```
+
+  Launch Codex CLI directly:
+
+  ```bash
+  codex
+  ```
+
+  Use in a specific project:
+
+  ```bash
+  cd mnt/c/path/to/your/project
+  codex
+  ```
+
+  Press Enter to launch Codex CLI.
 </Callout>
 
 ![windows-img-09.webp](/assets/codex/windows-img-09.webp)
@@ -132,7 +136,9 @@ Now you can start using Codex CLI!
 > Set Codex CLI permissions: 1. Allow Codex to modify files directly; 2. Codex requires manual authorization to modify files
 
 <Callout type="info" title="Select Model">
-  ` /model `
+  ```bash
+  /model
+  ```
 </Callout>
 
 ![windows-img-11.webp](/assets/codex/windows-img-11.webp)
@@ -156,8 +162,9 @@ Official Website: https://brew.sh
 ![macos-img-01.webp](/assets/codex/macos-img-01.webp)
 
 <Callout type="info" title="Install Homebrew">
-  ` /bin/bash -c "$(curl -fsSL
-  https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)" `
+  ```bash
+  /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+  ```
 </Callout>
 
 ![macos-img-02.webp](/assets/codex/macos-img-02.webp)
@@ -169,46 +176,75 @@ Official Website: https://brew.sh
 #### 2. Install Node.js Environment
 
 <Callout type="info" title="Node.js Environment Installation Steps">
-  Update Homebrew ` brew update ` Install Node.js ` brew install node `
+  Update Homebrew:
+
+  ```bash
+  brew update
+  ```
+
+  Install Node.js:
+
+  ```bash
+  brew install node
+  ```
 </Callout>
 
-!!! caution "macOS Notes" - If you encounter permission issues, you might need to use`sudo` - The first run might require permission in System Preferences - It is recommended to use`Terminal` or `iTerm2`
+<Callout type="warn" title="macOS Notes">
+  - If you encounter permission issues, you might need to use `sudo`
+  - The first run might require permission in System Preferences
+  - It is recommended to use Terminal or iTerm2
+</Callout>
 
 ![macos-img-05.webp](/assets/codex/macos-img-05.webp)
 
 ![macos-img-06.webp](/assets/codex/macos-img-06.webp)
 
-<Callout type="info">
-  Information "Verify Installation Success" After installation, open the
-  terminal and enter the following commands: ` node --version npm --version ` If
-  version numbers are displayed, the installation was successful
+<Callout type="info" title="Verify Installation Success">
+  After installation, open the terminal and enter the following commands:
+
+  ```bash
+  node --version
+  npm --version
+  ```
+
+  If version numbers are displayed, the installation was successful.
 </Callout>
 
 #### 3. Install Codex CLI
 
 <Callout type="info" title="Install Codex CLI">
-  Open the terminal and run the following commands: ` # Install Codex CLI
-  globally npm install -g @openai/codex ` If you encounter permission issues,
-  you can use sudo: ` sudo npm install -g @openai/codex `
+  Open the terminal and run the following commands:
+
+  ```bash
+  # Install Codex CLI globally
+  npm install -g @openai/codex
+  ```
+
+  If you encounter permission issues, you can use sudo:
+
+  ```bash
+  sudo npm install -g @openai/codex
+  ```
 </Callout>
 
 ![macos-img-07.webp](/assets/codex/macos-img-07.webp)
 
 <Callout type="info" title="Verify Codex CLI Installation">
-  After installation, enter the following command to check if the installation
-  was successful: ` codex --version ` If a version number is displayed,
-  congratulations! Codex CLI has been successfully installed.
+  After installation, enter the following command to check if the installation was successful:
+
+  ```bash
+  codex --version
+  ```
+
+  If a version number is displayed, congratulations! Codex CLI has been successfully installed.
 </Callout>
 
 #### 4. Modify Configuration File
 
-<Callout
-  type="info"
-  title="One-click Modification of Codex CLI Configuration File"
->
-  ` curl -fsSL
-  https://raw.githubusercontent.com/QuantumNous/new-api-docs/refs/heads/main/helper/codex-cli-setup.sh
-  | bash `
+<Callout type="info" title="One-click Modification of Codex CLI Configuration File">
+  ```bash
+  curl -fsSL https://raw.githubusercontent.com/QuantumNous/new-api-docs/refs/heads/main/helper/codex-cli-setup.sh | bash
+  ```
 </Callout>
 
 ![macos-configure](/assets/codex/macos_configure.png)
@@ -218,8 +254,20 @@ Official Website: https://brew.sh
 Now you can start using Codex CLI!
 
 <Callout type="info" title="Launch Codex CLI">
-  Launch Codex CLI directly: ` codex ` Use in a specific project: ` cd
-  mnt/c/path/to/your/project ` ` codex ` Press Enter to launch Codex CLI
+  Launch Codex CLI directly:
+
+  ```bash
+  codex
+  ```
+
+  Use in a specific project:
+
+  ```bash
+  cd /path/to/your/project
+  codex
+  ```
+
+  Press Enter to launch Codex CLI.
 </Callout>
 
 ![macos-img-09.webp](/assets/codex/macos-img-09.webp)
@@ -240,24 +288,20 @@ Now you can start using Codex CLI!
 
 #### 6. macOS Common Issues Troubleshooting
 
-<Callout type="info" title="Permission Error During Installation" collapsible>
+<Callout type="info" title="Permission Error During Installation">
   Try the following solutions:
+
+  - Install with `sudo`: `sudo npm install -g @openai/codex`
+  - Or configure `npm` to use the user directory: `npm config set prefix ~/.npm-global`
 </Callout>
 
-    - Install with`sudo`: `sudo npm install -g @openai/codex`
-    - Or configure`npm` to use the user directory: `npm config set prefix ~/.npm-global`
-
-<Callout
-  type="info"
-  title="macOS Security Settings Prevent Running"
-  collapsible
->
+<Callout type="info" title="macOS Security Settings Prevent Running">
   If the system prevents Codex CLI from running:
-</Callout>
 
-    - Open "System Preferences" → "Security & Privacy"
-    - Click "Open Anyway" or "Allow"
-    - Or run in`Terminal`: `sudo spctl --master-disable`
+  - Open "System Preferences" → "Security & Privacy"
+  - Click "Open Anyway" or "Allow"
+  - Or run in Terminal: `sudo spctl --master-disable`
+</Callout>
 
 ### Linux Graphical Guide
 
@@ -266,47 +310,75 @@ Now you can start using Codex CLI!
 Codex CLI requires a Node.js environment to run.
 
 <Callout type="info" title="Node.js Environment Installation Steps">
-  Add NodeSource repository ` sudo curl -fsSL
-  https://deb.nodesource.com/setup_lts.x | sudo -E bash - ` Install Node.js `
-  sudo apt-get install -y nodejs `
+  Add NodeSource repository:
+
+  ```bash
+  sudo curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
+  ```
+
+  Install Node.js:
+
+  ```bash
+  sudo apt-get install -y nodejs
+  ```
 </Callout>
 
-!!! caution "Linux Notes" - Some distributions may require additional dependencies - If you encounter permission issues, use sudo - Ensure your user has write permissions in npm's global directory
+<Callout type="warn" title="Linux Notes">
+  - Some distributions may require additional dependencies
+  - If you encounter permission issues, use sudo
+  - Ensure your user has write permissions in npm's global directory
+</Callout>
 
 ![linux-img-01.webp](/assets/codex/linux-img-01.webp)
 
 ![linux-img-02.webp](/assets/codex/linux-img-02.webp)
 
-<Callout type="info">
-  Information "Verify Installation Success" After installation, open the
-  terminal and enter the following commands: ` node --version npm --version ` If
-  version numbers are displayed, the installation was successful
+<Callout type="info" title="Verify Installation Success">
+  After installation, open the terminal and enter the following commands:
+
+  ```bash
+  node --version
+  npm --version
+  ```
+
+  If version numbers are displayed, the installation was successful.
 </Callout>
 
 #### 2. Install Codex CLI
 
 <Callout type="info" title="Install Codex CLI">
-  Open the terminal and run the following commands: ` # Install Codex CLI
-  globally npm install -g @openai/codex ` If you encounter permission issues,
-  you can use sudo: ` sudo npm install -g @openai/codex `
-  ![linux-img-03.webp](/assets/codex/linux-img-03.webp)
+  Open the terminal and run the following commands:
+
+  ```bash
+  # Install Codex CLI globally
+  npm install -g @openai/codex
+  ```
+
+  If you encounter permission issues, you can use sudo:
+
+  ```bash
+  sudo npm install -g @openai/codex
+  ```
 </Callout>
 
+![linux-img-03.webp](/assets/codex/linux-img-03.webp)
+
 <Callout type="info" title="Verify Codex CLI Installation">
-  After installation, enter the following command to check if the installation
-  was successful: ` codex --version ` If a version number is displayed,
-  congratulations! Codex CLI has been successfully installed.
+  After installation, enter the following command to check if the installation was successful:
+
+  ```bash
+  codex --version
+  ```
+
+  If a version number is displayed, congratulations! Codex CLI has been successfully installed.
 </Callout>
 
 #### 3. Modify Configuration File
 
-<Callout
-  type="info"
-  title="One-click Modification of Codex CLI Configuration File"
->
-  ` curl -fsSL
-  https://raw.githubusercontent.com/QuantumNous/new-api-docs/refs/heads/main/helper/codex-cli-setup.sh
-  | bash `
+<Callout type="info" title="One-click Modification of Codex CLI Configuration File">
+  ```bash
+  curl -fsSL https://raw.githubusercontent.com/QuantumNous/new-api-docs/refs/heads/main/helper/codex-cli-setup.sh | bash
+  ```
 </Callout>
 
 ![macos-configure](/assets/codex/macos_configure.png)
@@ -316,9 +388,23 @@ Codex CLI requires a Node.js environment to run.
 Now you can start using Codex CLI!
 
 <Callout type="info" title="Launch Codex CLI">
-  Launch Codex CLI directly: ` # Launch Codex CLI codex ` Use in a specific
-  project: ` # Navigate to your project directory cd /path/to/your/project ` ` #
-  Launch Codex CLI codex ` Press Enter to launch Codex CLI
+  Launch Codex CLI directly:
+
+  ```bash
+  codex
+  ```
+
+  Use in a specific project:
+
+  ```bash
+  # Navigate to your project directory
+  cd /path/to/your/project
+
+  # Launch Codex CLI
+  codex
+  ```
+
+  Press Enter to launch Codex CLI.
 </Callout>
 
 ![linux-img-05.webp](/assets/codex/linux-img-05.webp)
@@ -339,18 +425,22 @@ Now you can start using Codex CLI!
 
 #### 5. Linux Common Issues Troubleshooting
 
-<Callout type="info" title="Permission Error During Installation" collapsible>
+<Callout type="info" title="Permission Error During Installation">
   Try the following solutions:
+
+  - Install with `sudo`: `sudo npm install -g @openai/codex`
+  - Or configure `npm` to use the user directory: `npm config set prefix ~/.npm-global`
+  - Then add to PATH: `export PATH=~/.npm-global/bin:$PATH`
 </Callout>
 
-    - Install with`sudo`: `sudo npm install -g @openai/codex`
+<Callout type="info" title="Missing Dependency Libraries">
+  Some Linux distributions require additional dependencies:
 
-    - Or configure`npm` to use the user directory: `npm config set prefix ~/.npm-global`
+  ```bash
+  # Ubuntu/Debian
+  sudo apt install build-essential
 
-    - Then add to`PATH`: `export PATH=~/.npm-global/bin:$PATH`
-
-<Callout type="info" title="Missing Dependency Libraries" collapsible>
-  Some Linux distributions require additional dependencies: ` # Ubuntu/Debian
-  sudo apt install build-essential ` ` # CentOS/RHEL sudo dnf groupinstall
-  "Development Tools" `
+  # CentOS/RHEL
+  sudo dnf groupinstall "Development Tools"
+  ```
 </Callout>
